--- a/vars.yml
+++ b/vars.yml
@@ -7,17 +7,17 @@ default_user_home: "/root"
 # configurations for new instance
 instance:
 
-#  machine_type: "n1-standard-2"
-#  zone: "us-east1-b"
+  machine_type: "n1-standard-2"
+  zone: "us-east1-b"
 #  image: "ubuntu-1604-xenial-v20180814"
- 
-  machine_type: "n1-standard-1"
-  zone: "australia-southeast1-b"
+
+  # machine_type: "n1-standard-1"
+  # zone: "australia-southeast1-b"
   image: "ubuntu-1604-xenial"
-  
+
 database:
   hostname: "localhost"
   port: "3306"
   username: "root"
   dbname: "owncloud"
-   
+
