--- a/roles/nfsdisk/tasks/main.yml
+++ b/roles/nfsdisk/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: mount
   mount:
     path: /vars/www/owncloud
-    src: "{{ item }}":/vars/www/owncloud
+    src: "{{ item }}:/vars/www/owncloud"
     fstype: nfs
     state: mounted
   with_inventory_hostnames:
