--- a/main.yml
+++ b/main.yml
@@ -12,17 +12,17 @@
     # Packages required by the management server
     - include_tasks: tasks/common.yml
     # Create a new GCP instance
-    # - include_tasks: tasks/instance.yml instance_name="{{ instances.name }}" instance_group="{{ instances.group }}"
-    #   with_items:
-    #     # - {name: loadbalancer, group: loadbalancer}
-    #     - {name: server1, group: server}
-    #     # - {name: server2, group: server}
-    #     - {name: database, group: database}
-    #     - {name: nfs, group: nfs}
-    #     #- {name: backup, group: backup}
-    #     #- {name: ldap, group: ldap}
-    #   loop_control:
-    #     loop_var: instances
+    - include_tasks: tasks/instance.yml instance_name="{{ instances.name }}" instance_group="{{ instances.group }}"
+      with_items:
+        # - {name: loadbalancer, group: loadbalancer}
+        - {name: server1, group: server}
+        # - {name: server2, group: server}
+        - {name: database, group: database}
+        - {name: nfs, group: nfs}
+        #- {name: backup, group: backup}
+        #- {name: ldap, group: ldap}
+      loop_control:
+        loop_var: instances
 
 - hosts: database
 
