--- a/tasks/instance.yml
+++ b/tasks/instance.yml
@@ -15,7 +15,7 @@
 - name: who
   shell: whoami
   register: name
-  
+
 - name: Create Firewall Rule w/Source Tags
   gce_net:
     name: default
@@ -26,6 +26,16 @@
     allowed: tcp:3306
     state: "present"
     target_tags: "database"
+- name: Create Firewall Rule w/Source Tags
+  gce_net:
+    name: default
+    project_id: "{{ project_id }}"
+    credentials_file: ""
+    service_account_email: ""
+    fwname: "nfs"
+    allowed: "tcp:111,2049;udp:111,2049"
+    state: "present"
+    target_tags: "nfs"
 
 # create a GCP instance using details in vars.yml
 - name: Launch instances
@@ -41,6 +51,7 @@
     tags:
       - http-server
       - database
+      - nfs
   register: gce
 
 - name: Wait for SSH to come up
