--- a/roles/nfsdisk/tasks/main.yml
+++ b/roles/nfsdisk/tasks/main.yml
@@ -26,7 +26,7 @@
 - name: get permission
 #   shell: chown -R www-data:www-data /var/www/owncloud/
   file:
-    path: /var/www/
+    path: /var/www/owncloud
     recurse: yes
     owner: www-data
     group: www-data
