--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -4,6 +4,15 @@
 
 - name: create folder
   file: path=/ownclouddata state=directory
+  
+- name: get permission
+#   shell: chown -R www-data:www-data /var/www/owncloud/
+  file:
+    path: /var/www/owncloud
+    recurse: yes
+    owner: www-data
+    group: www-data
+    mode: 0777
 
 - name: add folder 1
   lineinfile:
