--- a/main.yml
+++ b/main.yml
@@ -42,8 +42,8 @@
 
   roles:
     # - apache
-    - php
-    - owncloud
+    # - php
+    # - owncloud
     - nfs
 
 
@@ -59,7 +59,7 @@
     - apache
     - php
     - nfsdisk
-    # - owncloud
+    - owncloud
 
 
 # =========================================================================================================================
