--- a/roles/owncloud/tasks/main.yml
+++ b/roles/owncloud/tasks/main.yml
@@ -18,13 +18,13 @@
   with_inventory_hostnames:
     - database
 
-- name: get my public IP
-  ipify_facts:
+# - name: get my public IP
+#   ipify_facts:
 
-- name: set config
-  shell: sed -i "8c 0 => '{{ ipify_public_ip }}'," config/config.php
-  args:
-    chdir: /var/www/owncloud
+# - name: set config
+#   shell: sed -i "8c 0 => '{{ ipify_public_ip }}'," /var/www/owncloud/config/config.php
+#   args:
+#     chdir: /var/www/owncloud
 
 
 # - name: copying template file
