--- a/tasks/gce_create_volume.yml
+++ b/tasks/gce_create_volume.yml
@@ -3,7 +3,7 @@
 
 - name: create new gce persistent disk
   gce_pd:
-    name: "{{ disk_name }}"
+    name: "nfs-ssd"
     instance_name: "{{ instance_name }}"
     size_gb: "{{ disk_size }}"
     disk_type: pd-ssd
