--- a/tasks/gce_create_volume.yml
+++ b/tasks/gce_create_volume.yml
@@ -4,7 +4,7 @@
 - name: create new gce persistent disk
   gce_pd:
     name: "nfs-ssd"
-    instance_name: "{{ instance_name }}"
+    instance_name: "nfs"
     size_gb: "{{ disk_size }}"
     disk_type: pd-ssd
     zone: "{{ instance.zone }}"
