--- a/tasks/instance_common.yml
+++ b/tasks/instance_common.yml
@@ -27,6 +27,6 @@
     credentials_file: ""
     service_account_email: ""
     fwname: "nfs"
-    allowed: "tcp:111,2049;udp:111,2049"
+    allowed: "tcp:111,2049,24007-24011,38465-38485;udp:111,2049"
     state: "present"
     target_tags: "nfs"
