--- a/roles/nfs-client/tasks/main.yml
+++ b/roles/nfs-client/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: mount
   mount:
     path: /var/www/owncloud
-    src: "{{ item }}:/var/www/owncloud"
+    src: "{{ item }}:/owncloud"
     fstype: glusterfs
     state: mounted
   with_inventory_hostnames:
