--- a/playbooks/nfs.yml
+++ b/playbooks/nfs.yml
@@ -20,7 +20,7 @@
 
   tasks:
     - name: Create NFS server(s)
-      include_tasks: tasks/instance.yml
+      include_tasks: tasks/gce_creaete_instance.yml
       vars:
         instance_name: "{{ item }}"
         instance_group: nfs
