--- a/playbooks/database-server.yml
+++ b/playbooks/database-server.yml
@@ -7,16 +7,22 @@
   connection: local
   gather_facts: no
 
+  vars:
+    db_instances:
+      - db01
+    instance_group: database
+
   vars_files:
     - vars/vars.yml
 
   tasks:
-    - name: Create webservers server(s)
+    - name: Create database server(s)
       include_tasks: tasks/gce_create_instance.yml
       vars:
-        instance_name: "db01"
-        instance_group: database
+        instance_name: "{{ item }}"
         instance_tags: [database]
+      with_items:
+        - "{{ db_instances }}"
 
 - hosts: database
   become: true
