--- a/main.yml
+++ b/main.yml
@@ -39,18 +39,18 @@
   tasks:
     - name: touch file
       template:
-        src: confirguration/mysql
+        src: mysql
         dest: /etc/mysql.sh
         owner: root
         group: root
         mode: 0777
 
-    - name: replace key word
+    - name: replace host
       replace:
         path: /etc/mysql.sh
         regexp: '@host'
         replace: "{{ item }}"
-      with_inventory_hostname:
+      with_inventory_hostnames:
         - database
 
     - name: replace key word
@@ -60,13 +60,19 @@
         replace: "{{ password }}"
 
     - name: configure crontab
-      shell: sed "$a 1 1 * * * /etc/mysql.sh" crontab
+      shell: echo "* * * * * /etc/mysql.sh" >> crontab
+      args:
+        chdir: /etc
+
+    - name: run shell
+      shell: sudo bash mysql.sh
       args:
         chdir: /etc
 
     - name: restart crontab
+      become: yes
       service:
-        name: crontab
+        name: cron
         state: restarted
 
 #======================================================================================
