--- a/main.yml
+++ b/main.yml
@@ -45,7 +45,7 @@
         group: root
         mode: 0777
 
-    - name: replace key word
+    - name: replace password
       replace:
         path: /etc/mysql.sh
         regexp: '@password'
