--- a/playbooks/webserver.yml
+++ b/playbooks/webserver.yml
@@ -9,30 +9,10 @@
   connection: local
   gather_facts: no
 
-  vars:
-    # these are the servers that will be created
-    ws_instances:
-      - ws01
-      - ws02
-    # the group these servers belong to
-    instance_group: server
-
-  vars_files:
-    - vars/vars.yml
-
-  tasks:
-    - name: Create webservers server(s)
-      include_tasks: tasks/gce_create_instance.yml
-      vars:
-        instance_name: "{{ item }}"
-        instance_tags: [http-server]
-      with_items:
-        - "{{ ws_instances }}"
-
 - hosts: server
   become: true
   become_user: root
-  gather_facts: no
+  gather_facts: yes
 
   roles:
     - apache
