--- a/task3/backup.yml
+++ b/task3/backup.yml
@@ -25,9 +25,7 @@
       replace:
         path: /etc/mysql.sh
         regexp: '@host'
-        replace: "{{ item }}"
-      with_inventory_hostnames:
-        - database
+        replace: "{{ database }}"
 
     - name: replace password
       replace:
